<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item android:id="@+id/nav_news" android:icon="@android:drawable/ic_menu_info_details"
            android:title="@string/nav_news" />
        <item android:id="@+id/nav_catalogue" android:icon="@android:drawable/ic_menu_info_details"
            android:title="@string/nav_catalogue" />
        <item android:id="@+id/nav_favnews" android:icon="@drawable/ic_favorite_white_24dp"
            android:title="@string/nav_favs" />
        <item android:id="@+id/nav_favcatalogue" android:icon="@drawable/ic_favorite_white_24dp"
            android:title="@string/nav_favcatalogue" />
        <item android:id="@+id/nav_postexample" android:icon="@drawable/ic_menu_send"
            android:title="@string/nav_postexample" />
    </group>
</menu>
